--- a/server/djangoapp/.env
+++ b/server/djangoapp/.env
@@ -1,2 +1,2 @@
 backend_url =https://guatilam-3030.theiadockernext-0-labs-prod-theiak8s-4-tor01.proxy.cognitiveclass.ai
-sentiment_analyzer_url=https://sentianalyzer.1z7bdsevfk08.us-south.codeengine.appdomain.cloud/
+sentiment_analyzer_url=https://sentianalyzer.1zej5tgb7lfm.us-south.codeengine.appdomain.cloud/
